<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="@dimen/padding" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity">

    <TextView
        style="@style/MessageText"
        android:id="@+id/remitenteRecibido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/MessageText"
        android:id="@+id/mensajeRecibido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/baseline_mark_chat_unread_24" />
</LinearLayout>
