<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:padding="@dimen/padding" android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        style="@style/MessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/senderName"
        android:text="@string/sender_prompt" />

    <EditText
        style="@style/MessageText"
        android:id="@+id/senderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:minHeight="@dimen/min_height" />

    <TextView
        style="@style/MessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/userMessage"
        android:text="@string/user_msg"
        />

    <EditText
        style="@style/MessageText"
        android:id="@+id/userMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="@dimen/min_height" />

    <Button
        android:fontFamily="sans"
        android:id="@+id/sendMsgButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_msg_button" />

</LinearLayout>
